--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,26 +14,49 @@
     "test:cov": "jest --coverage"
   },
   "dependencies": {
-    "@profesional/contracts": "workspace:*",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.0.0",
     "@nestjs/swagger": "^7.1.17",
+    "@nestjs/terminus": "^10.2.0",
+    "@nestjs/throttler": "^5.0.1",
+    "@nestjs/websockets": "^10.0.0",
+    "@profesional/contracts": "workspace:*",
+    "@sentry/node": "^7.92.0",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "nestjs-pino": "^3.5.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "pino": "^8.16.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^11.1.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@profesional/config": "workspace:*",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@profesional/config": "workspace:*",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^3.0.13",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^10.0.0",
     "jest": "^29.5.0",
+    "pino-pretty": "^13.1.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
