--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,18 +13,25 @@
   "dependencies": {
     "@profesional/contracts": "workspace:*",
     "@profesional/ui": "workspace:*",
+    "@tanstack/react-query": "^5.17.0",
     "next": "14.0.4",
+    "next-seo": "^6.4.0",
+    "next-themes": "^0.2.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-intl": "^6.5.5",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@profesional/config": "workspace:*",
+    "@tanstack/react-query-devtools": "^5.17.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "lucide-react": "^0.263.1",
     "postcss": "^8",
     "prettier": "^3.1.1",
     "tailwindcss": "^3.3.0",
