--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "turbo": "^1.11.2"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
+    "*.{js,jsx,ts,tsx,mjs}": [
       "prettier --write"
     ],
     "*.{json,md,yml,yaml}": [
