--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -19,6 +19,8 @@
     "dev": "tsc --watch",
     "format": "prettier --write src/",
     "typecheck": "tsc --noEmit",
+    "test": "vitest",
+    "test:run": "vitest run",
     "clean": "rm -rf dist"
   },
   "dependencies": {
@@ -26,6 +28,8 @@
   },
   "devDependencies": {
     "@profesional/config": "workspace:*",
-    "typescript": "^5.3.3"
+    "@types/node": "^20.10.5",
+    "typescript": "^5.3.3",
+    "vitest": "^1.1.0"
   }
 }
