feat(api): initialize project structure with Prisma schema, database seeding, and Jest configuration
- Add .gitignore to exclude node_modules and environment variables
- Create jest.config.js for testing setup
- Implement init-schema.sql and manual-schema.sql for database schema
  creation
- Define Prisma schema with models for User, Profile, ServiceCategory,
  Location, ProfessionalProfile, Booking, Payment, and more
- Seed database with initial data including service categories,
  locations, users, and availability slots
- Establish foreign key relationships and indexes for optimized queries

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,6 +1,12 @@
 NODE_ENV=production
 PORT=3001
 
+# Database - Supabase PostgreSQL
+DATABASE_URL="postgresql://postgres:@C.pvHtxAjS38HY@db.emuwrzspezlhacgawmbs.supabase.co:5432/postgres"
+
+# Redis
+REDIS_URL="redis://localhost:6379"
+
 # JWT (set in production)
 JWT_SECRET=${JWT_SECRET}
 JWT_EXPIRES_IN=7d
