--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,9 +9,12 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "format": "prettier --write \"src/**/*.ts\"",
     "typecheck": "tsc --noEmit",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
-    "test:cov": "jest --coverage"
+    "test:cov": "jest --coverage",
+    "prisma:generate": "prisma generate",
+    "prisma:push": "prisma db push",
+    "prisma:seed": "ts-node --compiler-options '{\"module\":\"CommonJS\"}' prisma/seed.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -25,9 +28,12 @@
     "@nestjs/terminus": "^10.2.0",
     "@nestjs/throttler": "^5.0.1",
     "@nestjs/websockets": "^10.0.0",
+    "@prisma/client": "^6.14.0",
     "@profesional/contracts": "workspace:*",
     "@sentry/node": "^7.92.0",
+    "@types/bcryptjs": "^3.0.0",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "express-rate-limit": "^7.1.5",
@@ -37,6 +43,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pino": "^8.16.2",
+    "prisma": "^6.14.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "uuid": "^11.1.0",
