--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -2,12 +2,12 @@
   "name": "@profesional/contracts",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.js",
+      "require": "./dist/index.js",
       "types": "./dist/index.d.ts"
     }
   },
