--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,11 +28,11 @@
     "@nestjs/terminus": "^10.2.0",
     "@nestjs/throttler": "^5.0.1",
     "@nestjs/websockets": "^10.0.0",
+    "@node-rs/bcrypt": "^1.10.7",
     "@prisma/client": "^6.14.0",
     "@profesional/contracts": "workspace:*",
     "@sentry/node": "^7.92.0",
     "@types/bcryptjs": "^3.0.0",
-    "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -43,7 +43,6 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pino": "^8.16.2",
-    "prisma": "^6.14.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "uuid": "^11.1.0",
@@ -54,7 +53,6 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@profesional/config": "workspace:*",
-    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
@@ -64,6 +62,7 @@
     "@types/uuid": "^10.0.0",
     "jest": "^29.5.0",
     "pino-pretty": "^13.1.1",
+    "prisma": "^6.14.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
