--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,14 +13,21 @@
   "dependencies": {
     "@profesional/contracts": "workspace:*",
     "@profesional/ui": "workspace:*",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.17.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "next": "14.0.4",
     "next-seo": "^6.4.0",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-intl": "^6.5.5",
-    "zod": "^3.22.4"
+    "tailwind-merge": "^2.2.0",
+    "zod": "^3.22.4",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@profesional/config": "workspace:*",
