--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -13,6 +13,7 @@ JWT_EXPIRES_IN=7d
 
 # CORS (set your production domains)
 CORS_ORIGINS=${CORS_ORIGINS}
+ALLOWED_ORIGINS=${ALLOWED_ORIGINS}
 
 # Rate Limiting
 RATE_LIMIT_TTL=60
@@ -26,3 +27,16 @@ SENTRY_DSN=${SENTRY_DSN}
 
 # Request ID
 REQUEST_ID_HEADER=x-request-id
+
+# Storage Configuration
+STORAGE_PROVIDER=supabase
+
+# Supabase Storage (required if STORAGE_PROVIDER=supabase)
+SUPABASE_URL=${SUPABASE_URL}
+SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
+SUPABASE_STORAGE_BUCKET=attachments
+SUPABASE_SIGNED_URL_TTL=900
+
+# Vercel Blob Storage (optional, if STORAGE_PROVIDER=vercel)
+VERCEL_BLOB_READ_WRITE_TOKEN=${VERCEL_BLOB_READ_WRITE_TOKEN}
+BLOB_PUBLIC_BASE_URL=https://blob.vercel-storage.com
