--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -33,6 +33,7 @@
     "@prisma/client": "^6.14.0",
     "@profesional/contracts": "workspace:*",
     "@sentry/node": "^7.92.0",
+    "@supabase/supabase-js": "^2.56.0",
     "@types/bcryptjs": "^3.0.0",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
@@ -48,6 +49,7 @@
     "prisma": "^6.14.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
     "zod": "^3.22.4"
   },
