--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-intl": "^6.5.5",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.2.0",
     "zod": "^3.22.4",
     "zustand": "^5.0.7"
