--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.17.0",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "next": "14.0.4",
@@ -25,7 +26,6 @@
     "react": "^18",
     "react-dom": "^18",
     "react-intl": "^6.5.5",
-    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.2.0",
     "zod": "^3.22.4",
     "zustand": "^5.0.7"
