feat: add role-based panels with real data integration

--- a/.env-templates/.env.api.production
+++ b/.env-templates/.env.api.production
@@ -2,8 +2,8 @@
 NODE_ENV=production
 LOG_LEVEL=info
 
-# Database (Supabase)
-DATABASE_URL="postgresql://postgres.anqdbinmztorvdsausrn:[PASSWORD]@aws-0-us-east-1.pooler.supabase.com:6543/postgres"
+# Database (Supabase) - Using connection pooler for production
+DATABASE_URL="postgresql://postgres.anqdbinmztorvdsausrn:sJzu4VZF6uUW6rQ0@aws-0-us-east-1.pooler.supabase.com:6543/postgres"
 
 # Supabase Configuration
 SUPABASE_URL="https://anqdbinmztorvdsausrn.supabase.co"
