fix: railway build configuration - ensure proper build order
- add prisma generate to API build script
- add dummy build script to config package
- simplify nixpacks.toml to use turbo
- fixes missing module and prisma type errors

--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -8,6 +8,9 @@
     "tsconfig/**",
     "editorconfig/**"
   ],
+  "scripts": {
+    "build": "echo 'No build needed for config package'"
+  },
   "exports": {
     "./eslint/base": "./eslint/base.js",
     "./eslint/next": "./eslint/next.js",
