--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -6,14 +6,8 @@ cmds = ["pnpm install --frozen-lockfile"]
 
 [phases.build]
 cmds = [
-  "echo 'Checking workspace structure...'",
-  "ls -la",
-  "echo 'Checking packages directory...'",
-  "ls -la packages/",
-  "echo 'Building dependencies and API...'",
-  "pnpm turbo build --filter=@profesional/api",
-  "echo 'Generating Prisma client...'",
-  "cd apps/api && pnpm prisma generate"
+  "echo 'Building workspace with Turbo...'",
+  "pnpm turbo build --filter=@profesional/api... --filter=@profesional/web..."
 ]
 
 [start]
