fix(build): railway build configuration and TypeScript errors
Fix Railway build errors by correcting dependency build order
and TypeScript configuration issues.

Changes:
- Remove rootDir from api/tsconfig.json to allow importing
  workspace packages
- Add @profesional/contracts and @profesional/ui path mappings
- Update nixpacks.toml to build packages before applications
- Update railway.toml with correct build command sequence
- Delete unused *-service-fixed.ts files causing errors
- Fix frontend lint errors (unused imports)
- Fix notification hooks usage (direct functions not mutations)
- Fix notification.read vs notification.readAt field
- Fix formatDate to accept Date | string types
- Add eslint-disable for interface parameter
- Update .gitignore to exclude generated TS files

Build order:
1. contracts package
2. ui package
3. api application
4. web application

This ensures all dependencies are available before building
the applications that consume them.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@ build
 coverage
 *.tgz
 *.tar.gz
+
+# Generated TypeScript files
+packages/*/src/**/*.js
+packages/*/src/**/*.d.ts
+packages/*/src/**/*.js.map
+packages/*/src/**/*.d.ts.map
