--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -10,7 +10,6 @@
     "declarationMap": true,
     "sourceMap": true,
     "outDir": "./dist",
-    "rootDir": "./src",
     "removeComments": true,
     "strict": true,
     "noUnusedLocals": true,
@@ -28,6 +27,12 @@
       "@/*": [
         "./src/*"
       ],
+      "@profesional/contracts": [
+        "../../packages/contracts/src/index"
+      ],
+      "@profesional/ui": [
+        "../../packages/ui/src/index"
+      ],
       "@contracts/*": [
         "../../packages/contracts/src/*"
       ],
@@ -44,6 +49,8 @@
   ],
   "exclude": [
     "node_modules",
-    "dist"
+    "dist",
+    "**/*.spec.ts",
+    "**/*.test.ts"
   ]
 }
