docs: complete API/Frontend separation setup
- Add comprehensive migration guides and documentation
- Configure @profesional/contracts for GitHub Packages
- Create automated migration scripts (migrate-api.sh, setup-api.sh, cleanup-monorepo.sh)
- Add CORS configuration documentation
- Create publish script for contracts
- Update package.json for independent API deployment
- Add INDEX.md as documentation entry point

This resolves build path issues and enables independent deployments

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,9 +1,18 @@
 {
   "name": "@profesional/contracts",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/marcosstevens2012/profesional.git",
+    "directory": "packages/contracts"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com",
+    "@profesional:registry": "https://npm.pkg.github.com"
+  },
   "exports": {
     ".": {
       "import": "./dist/index.js",
