fix: update package names and references from @profesional to @marcosstevens2012

--- a/packages/contracts/.npmrc
+++ b/packages/contracts/.npmrc
@@ -1,2 +1,2 @@
-@profesional:registry=https://npm.pkg.github.com
+@marcosstevens2012:registry=https://npm.pkg.github.com
 //npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
