--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -1,38 +1,27 @@
 {
   "framework": "nextjs",
-  "buildCommand": "cd ../.. && pnpm build --filter=web",
-  "devCommand": "cd ../.. && pnpm dev --filter=web",
-  "installCommand": "cd ../.. && pnpm install",
+  "buildCommand": "cd ../.. && pnpm build --filter=@profesional/web",
+  "devCommand": "cd ../.. && pnpm dev --filter=@profesional/web",
+  "installCommand": "cd ../.. && pnpm install --frozen-lockfile",
   "outputDirectory": ".next",
   "regions": ["iad1"],
-  "functions": {
-    "apps/web/src/app/api/**/*.ts": {
-      "maxDuration": 30
-    }
-  },
   "headers": [
     {
-      "source": "/api/(.*)",
+      "source": "/(.*)",
       "headers": [
         {
-          "key": "Access-Control-Allow-Origin",
-          "value": "*"
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
         },
         {
-          "key": "Access-Control-Allow-Methods",
-          "value": "GET, POST, PUT, DELETE, OPTIONS"
+          "key": "X-Frame-Options",
+          "value": "DENY"
         },
         {
-          "key": "Access-Control-Allow-Headers",
-          "value": "Content-Type, Authorization"
+          "key": "X-XSS-Protection",
+          "value": "1; mode=block"
         }
       ]
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/api/proxy/(.*)",
-      "destination": "$NEXT_PUBLIC_API_URL/$1"
     }
   ]
 }
