fix: update railway.toml build command - remove @profesional/ui reference

--- a/apps/web/railway.toml
+++ b/apps/web/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "nixpacks"
-buildCommand = "cd ../.. && pnpm install --frozen-lockfile && pnpm --filter @profesional/contracts build && pnpm --filter @profesional/ui build && pnpm --filter @profesional/web build"
+buildCommand = "cd ../.. && pnpm install --frozen-lockfile && pnpm --filter @profesional/contracts build && pnpm --filter @profesional/web build"
 
 [deploy]
 startCommand = "cd apps/web && pnpm start"
