--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "profesional-frontend",
   "private": true,
   "version": "0.1.0",
-  "description": "Frontend monorepo para la plataforma Profesional - Next.js + pnpm workspaces",
+  "description": "Frontend monorepo para la plataforma Profesional - Next.js + npm workspaces",
   "engines": {
     "node": ">=20.0.0",
-    "pnpm": ">=8.0.0"
+    "npm": ">=8.0.0"
   },
-  "packageManager": "pnpm@8.15.6",
+  "packageManager": "npm@10.0.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/marcosstevens2012/profesional.git"
