--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
     "@sentry/nextjs": "^10.17.0",
     "@tanstack/react-query": "^5.17.0",
     "axios": "^1.11.0",
@@ -37,6 +38,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-intl": "^6.5.5",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.2.0",
     "zod": "^3.22.4",
     "zustand": "^5.0.7"
